--- a/cli/tests/create/firewall.yaml
+++ b/cli/tests/create/firewall.yaml
@@ -1,4 +1,4 @@
-name: test-firewall-dpl
+name: cftcli-test-firewall-dpl
 project: gl-akopachevskyy-dm-seed
 
 imports:
@@ -6,7 +6,7 @@ imports:
   name: firewall.py
 
 resources:
-- name: test-firewall
+- name: cftcli-test-firewall
   type: firewall.py
   properties:
     network: $(out.gl-akopachevskyy-dm-seed.cftcli-test-network-dpl.cftcli-test-network.name)
