--- a/dm/templates/iam_member/examples/iam_member.yaml
+++ b/dm/templates/iam_member/examples/iam_member.yaml
@@ -7,6 +7,7 @@
 # Replace `service-account` with a valid service account.
 # Replace `group-address` with a valid group. 
 # Replace `domain-name` with a valid domain.
+# Replace `folderId` with a folder ID to assign roles to.
 
 
 imports:
@@ -14,9 +15,23 @@ imports:
     name: iam_member.py
 
 resources:
-  - name: iam-member-test
+  - name: iam-member-project
     type: iam_member.py
     properties:
+      roles:
+        - role: roles/editor
+          members:
+            - user:<FIXME:user-email-example:name@example.com>
+            - serviceAccount:<FIXME:service-account-example:example@myprojectname.gserviceaccount.com>
+        - role: roles/viewer
+          members:
+            - group:<FIXME:group-address-example:admins@example.com>
+            - domain:<FIXME:domain-name-example:example.com>
+
+  - name: iam-member-folder
+    type: iam_member.py
+    properties:
+      folderId: "<FIXME:folderId>"
       roles:
         - role: roles/editor
           members:
