--- a/dm/templates/dns_managed_zone/tests/integration/dns_mz_simple.yaml
+++ b/dm/templates/dns_managed_zone/tests/integration/dns_mz_simple.yaml
@@ -9,6 +9,6 @@ resources:
   - name: ${CLOUDDNS_ZONE_NAME}-resource
     type: dns_managed_zone.py
     properties:
-      zoneName: ${CLOUDDNS_ZONE_NAME}
+      name: ${CLOUDDNS_ZONE_NAME}
       dnsName: ${CLOUDDNS_DNS_NAME}
       description: ${CLOUDDNS_DESCRIPTION}
