--- a/dm/templates/dns_managed_zone/tests/integration/dns_mz_simple.yaml
+++ b/dm/templates/dns_managed_zone/tests/integration/dns_mz_simple.yaml
@@ -1,5 +1,4 @@
-# Test of the DNS managed zone template.
-#
+# Test of the simplest DNS managed zone template.
 
 imports:
   - path: templates/dns_managed_zone/dns_managed_zone.py
