--- a/dm/templates/dns_managed_zone/tests/integration/dns_mz_cross_project.yaml
+++ b/dm/templates/dns_managed_zone/tests/integration/dns_mz_cross_project.yaml
@@ -1,6 +1,12 @@
-# Test of the DNS managed zone template.
+# Test Case: Cross-Project Reference
+# Use Case:
+#   You have multiple projects with dependancies on each other.
+#   Like one project assumes a presence of DNS Zone in another in order
+#   to use it as an endpoint. So within your agregated pipe-line you may want
+#   to provision resources in both of the projets.
 #
-
+#   Please note: you should grant Editor permission on the cross-referenced
+#   Project to your current Google APIs account <PROJECT_ID>@cloudservices.gserviceaccount.com
 imports:
   - path: templates/dns_managed_zone/dns_managed_zone.py
     name: dns_managed_zone.py
