--- a/dm/templates/dns_managed_zone/tests/integration/dns_mz_public.yaml
+++ b/dm/templates/dns_managed_zone/tests/integration/dns_mz_public.yaml
@@ -1,5 +1,7 @@
-# Test of the DNS managed zone template.
-#
+# Test Case: Public Visibility
+# Use Case:
+#   You want to create a Managed Zone with Public Visibility,
+#   which makes it exposed to Internet
 
 imports:
   - path: templates/dns_managed_zone/dns_managed_zone.py
