Adding upstream nameservers tests to ci

--- a/infra/concourse/pipelines/terraform-google-kubernetes-engine.yml
+++ b/infra/concourse/pipelines/terraform-google-kubernetes-engine.yml
@@ -212,6 +212,18 @@ jobs:
       params:
         <<: *run-tests-params
 
+    - task: run-upstream-nameservers
+      image: integration-test-image
+      file: pull-request/test/ci/upstream-nameservers.yml
+      params:
+        <<: *run-tests-params
+
+    - task: run-stub-domains-upstream-nameservers
+      image: integration-test-image
+      file: pull-request/test/ci/stub-domains-upstream-nameservers.yml
+      params:
+        <<: *run-tests-params
+
   on_success:
     put: notify-integration-test-success
     resource: pull-request
