--- a/dm/templates/vpn/tests/integration/vpn.yaml
+++ b/dm/templates/vpn/tests/integration/vpn.yaml
@@ -9,9 +9,10 @@ imports:
     name: vpn.py
 
 resources:
-  - name: test-vpn-${RAND}
+  - name: vpn-${RAND}
     type: vpn.py
     properties:
+      name: test-vpn-${RAND}
       region: us-east1
       network: network-${RAND}
       peerAddress: 1.2.3.4
