Fixes #184: DM/runtime_config: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/184
- Added version, links to docs
- Switched to using type provider
- Added support for cross-project resource creation
- Fixed resource names
- Standardized naming

--- a/dm/templates/runtime_config/examples/runtime_config.yaml
+++ b/dm/templates/runtime_config/examples/runtime_config.yaml
@@ -8,15 +8,15 @@ resources:
   - name: my-test-config
     type: runtime_config.py
     properties:
-      config: my-test-config
+      name: my-test-config
       description: my config description
       variables:
-        - variable: myapp/dev/sql/connection_string
+        - name: myapp/dev/sql/connection_string
           text: super text value
-        - variable: myapp/dev/web/wildcardcert
+        - name: myapp/dev/web/wildcardcert
           value: c3VwZXJhd2Vzb21ldGV4dAo=
       waiters:
-        - waiter: my-test-waiter
+        - name: my-test-waiter
           timeout: 3.5s
           success:
             cardinality:
