Fixes #185: DM/stackdriver_metric_descriptor: refactoring https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/185
- Added version, links to docs
- Added support for cross-project resource creation
- Fixed resource names
- Added support for "launchStage", deprecated "metadata.launchStage"
- Added checks for "unit"

--- a/dm/templates/stackdriver_metric_descriptor/tests/integration/stackdriver_metric_descriptor.yaml
+++ b/dm/templates/stackdriver_metric_descriptor/tests/integration/stackdriver_metric_descriptor.yaml
@@ -16,7 +16,7 @@ imports:
     name: metric_descriptor.py
 
 resources:
-  - name: ${METRIC_NAME}
+  - name: metric
     type: metric_descriptor.py
     properties:
       name: ${METRIC_NAME}
@@ -26,7 +26,7 @@ resources:
       metricKind: ${METRIC_KIND}
       valueType: ${VALUE_TYPE}
       unit: "${UNIT}"
+      launchStage: ${LAUNCH_STAGE}
       metadata:
-        launchStage: ${LAUNCH_STAGE}
         samplePeriod: "${SAMPLE_PERIOD}"
         ingestDelay: "${INGEST_DELAY}"
