Fixes #220: [DM] Backend_service update example according to schema validation https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/220

--- a/dm/templates/backend_service/examples/backend_service_regional.yaml
+++ b/dm/templates/backend_service/examples/backend_service_regional.yaml
@@ -21,5 +21,6 @@ resources:
       loadBalancingScheme: INTERNAL
       backends:
         - group: <FIXME:instanceGroup>
+          balancingMode: CONNECTION
       healthChecks:
         - <FIXME:healthcheck>
