--- a/infra/concourse/pipelines/terraform-google-iam.yml
+++ b/infra/concourse/pipelines/terraform-google-iam.yml
@@ -110,6 +110,8 @@ jobs:
             dir: terraform-google-iam
           params:
             PROJECT_ID: ((iam.phoogle_project_id))
+            BILLING_ACCOUNT_ID: ((phoogle.billing_account_id))
+            ORG_ID: ((phoogle.org_id))
             SERVICE_ACCOUNT_JSON: ((iam.phoogle_sa))
     on_success:
       put: notify-integration-test-success
