Add phoogle_folder_id IAM folder ID to KMS for 0.12
Without this patch the integration tests for IAM create resources at the
organization level where it does not have sufficient permissions.  This
patch is a necessary step to plumb the IAM Folder ID through the
Concourse Pipeline to the integration tests so that resources may be
created in the IAM folder fixture.

--- a/infra/concourse/pipelines/terraform-google-iam.yml
+++ b/infra/concourse/pipelines/terraform-google-iam.yml
@@ -109,6 +109,7 @@ jobs:
               - test_integration
             dir: terraform-google-iam
           params:
+            FOLDER_ID: ((iam.phoogle_folder_id))
             PROJECT_ID: ((iam.phoogle_project_id))
             BILLING_ACCOUNT_ID: ((phoogle.billing_account_id))
             ORG_ID: ((phoogle.org_id))
