Fixes #180: Add tests for beta submodules/examples https://github.com/terraform-google-modules/terraform-google-kubernetes-engine/issues/180
Updated GKE CI pipeline for beta module

--- a/infra/concourse/pipelines/terraform-google-kubernetes-engine.yml
+++ b/infra/concourse/pipelines/terraform-google-kubernetes-engine.yml
@@ -161,6 +161,12 @@ jobs:
       params:
         <<: *run-tests-params
 
+    - task: run-tests-beta-cluster
+      image: integration-test-image
+      file: pull-request/test/ci/beta-cluster.yml
+      params:
+        <<: *run-tests-params
+
   on_success:
     put: notify-integration-test-success
     resource: pull-request
