[DM] fixing CloudSQL example

--- a/dm/templates/cloud_sql/examples/cloud_sql_read_replica.yaml
+++ b/dm/templates/cloud_sql/examples/cloud_sql_read_replica.yaml
@@ -37,4 +37,5 @@ resources:
       masterInstanceName: $(ref.cloud-sql-master-instance.name)
       # Wait until all the resources required by the master instance had been
       # created.
-      dependsOn: $(ref.cloud-sql-master-instance.resources)
+      dependsOn: 
+        - $(ref.cloud-sql-master-instance.resources)
