Fixes #269: DM dev branch quality control https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/269
- Fixed templates/instance_template/tests/integration/instance_template_networks.bats

--- a/dm/templates/instance_template/tests/integration/instance_template_networks.yaml
+++ b/dm/templates/instance_template/tests/integration/instance_template_networks.yaml
@@ -9,7 +9,7 @@ imports:
     name: instance_template.py
 
 resources:
-  - name: instance-template-${RAND}
+  - name: it-${RAND}
     type: instance_template.py
     properties:
       name: it-${RAND}
@@ -19,11 +19,13 @@ resources:
         - network: $(ref.test-network-0-${RAND}.selfLink)
           subnetwork: $(ref.test-subnetwork-0-${RAND}.selfLink)
           accessConfigs:
-            - type: ONE_TO_ONE_NAT
+            - name: External NAT
+              type: ONE_TO_ONE_NAT
         - network: $(ref.test-network-1-${RAND}.selfLink)
           subnetwork: $(ref.test-subnetwork-1-${RAND}.selfLink)
           accessConfigs:
-            - type: ONE_TO_ONE_NAT
+            - name: External NAT
+              type: ONE_TO_ONE_NAT
       diskImage: ${IMAGE}
       machineType: f1-micro
       canIpForward: true
