Fixes #269: DM dev branch quality control https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/269
- Fixed templates/instance/tests/integration/instance_template/instance_template.bats

--- a/dm/templates/instance_template/tests/integration/instance_template.yaml
+++ b/dm/templates/instance_template/tests/integration/instance_template.yaml
@@ -18,7 +18,8 @@ resources:
       networks:
         - network: $(ref.test-network-${RAND}.selfLink)
           accessConfigs:
-            - type: ONE_TO_ONE_NAT
+            - name: External NAT
+              type: ONE_TO_ONE_NAT
       diskImage: ${IMAGE}
       machineType: f1-micro
       canIpForward: true
