[DM] project test fix

--- a/dm/templates/project/tests/integration/project.yaml
+++ b/dm/templates/project/tests/integration/project.yaml
@@ -25,5 +25,5 @@ resources:
           roles:
             - roles/editor
             - roles/viewer
-      usageExportBucket: true
-      sharedVPCHost: true
+      usageExportBucket: True
+      sharedVPCHost: True
