--- a/dm/templates/cloudbuild/examples/cloudbuild_trigger.yaml
+++ b/dm/templates/cloudbuild/examples/cloudbuild_trigger.yaml
@@ -3,6 +3,18 @@
 # In this example, a Build trigger is created for the following Github repo.
 # https://github.com/GoogleCloudBuild/gcbapp-example
 #
+# Pre-requisites steps for creating this trigger:
+# Step1: Login to github and fork the following github repo
+#        https://github.com/GoogleCloudBuild/gcbapp-example
+# Step2: Create a Cloud Source repo named gcbapp-example
+#        After the repo is created successfully do the following
+#        - Select "Automatically mirror from Github/Bitbucket" option
+#        - Select "Hosting Service", Choose "Github" from dropdown then Connect
+# Example of the Cloud Build trigger template usage.
+#
+# In this example, a Build trigger is created for the following Github repo.
+# https://github.com/GoogleCloudBuild/gcbapp-example
+#
 # Pre-requisites steps for creating this trigger: 
 # Step1: Login to github and fork the following github repo
 #        https://github.com/GoogleCloudBuild/gcbapp-example
@@ -42,3 +54,4 @@ resources:
           _IMAGE_NAME: gcbapp-example
         images:
           - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+          
