--- a/dm/templates/dns_managed_zone/examples/dns_managed_zone_private_visibility_config.yaml
+++ b/dm/templates/dns_managed_zone/examples/dns_managed_zone_private_visibility_config.yaml
@@ -2,6 +2,8 @@
 #
 # In this example, a private DNS managed zone is created with the use of
 # the `visibility` and `privateVisibilityConfig` properties.
+#   <FIXME:project_id>: a valid project name.
+#   <FIXME:network_id>: a valid VPC network name.
 
 imports:
   - path: templates/dns_managed_zone/dns_managed_zone.py
@@ -19,4 +21,4 @@ resources:
         kind: "dns#managedZonePrivateVisibilityConfig"
         networks:
           - kind: "dns#managedZonePrivateVisibilityConfigNetwork"
-            networkUrl: "https://www.googleapis.com/compute/v1/projects/<PROJECT_ID>/global/networks/<NETWORK_ID>"
+            networkUrl: "https://www.googleapis.com/compute/v1/projects/<FIXME:project_id>/global/networks/<FIXME:network_id>"
