Fixed #135: DM/Add subscription expiration policy to Pub/Sub template https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/135
Added and fixed tests

--- a/dm/templates/pubsub/tests/integration/pubsub.yaml
+++ b/dm/templates/pubsub/tests/integration/pubsub.yaml
@@ -24,3 +24,5 @@ resources:
                 - user:demo@user.com
         - name: second-subscription-${RAND}
           ackDeadlineSeconds: 15
+          expirationPolicy:
+            ttl: 86400s
