--- a/dm/templates/instance/tests/integration/instance_source_template.yaml
+++ b/dm/templates/instance/tests/integration/instance_source_template.yaml
@@ -1,17 +1,18 @@
-# Test of the Instance template.
+# Test of the Instance with sourceInstanceTemplate property provided.
 #
 # Variables:
 #   RAND: A random string used by the testing suite.
 
 imports:
+  - path: templates/instance_template/instance_template.py
+    name: instance_template.py
   - path: templates/instance/instance.py
     name: instance.py
 
 resources:
-  - name: test-instance-${RAND}
-    type: instance.py
+  - name: test-instance-template-${RAND}
+    type: instance_template.py
     properties:
-      zone: us-central1-a
       diskImage: projects/ubuntu-os-cloud/global/images/family/ubuntu-1804-lts
       diskSizeGb: 100
       machineType: f1-micro
@@ -22,4 +23,9 @@ resources:
       metadata:
         items:
           - key: startup-script
-            value: sudo apt-get update && sudo apt-get install -y nginx
+            value: sudo apt-get update && sudo apt-get install -y nginx\
+  - name: test-instance-${RAND}
+    type: instance.py
+    properties:
+      zone: us-central1-a
+      sourceInstanceTemplate: $(ref.test-instance-template-${RAND}.selfLink)
