--- a/dm/templates/project/examples/project_vpc_consumer.yaml
+++ b/dm/templates/project/examples/project_vpc_consumer.yaml
@@ -10,22 +10,25 @@
 # See `templates/project.py.schema` for detailed information on the
 # properties.
 #
-# Replace the `parent.id` placeholder with your organization ID.
-# Replace the `billingAccountId` placeholder with your billing
-# account ID.
+# Replace the following with valid values
+# <FIXME:project_name>: Project name
+# <FIXME:org_id>: Your organization ID
+# <FIXME:billing_id>: Your billing ID
+# <FIXME:vpc_host>: VPC host ID
+# <FIXME:vpc_host_subnet>: VPC host subnet
 
 imports:
   - path: templates/project/project.py
     name: project.py
 
 resources:
-  - name: <FIXME:UniqueProjectName>
+  - name: <FIXME:project_name>
     type: project.py
     properties:
       parent:
         type: organization
-        id: <FIXME:OrgID>
-      billingAccountId: <FIXME:BillingAccount:ID>
+        id: <FIXME:org_id>
+      billingAccountId: <FIXME:billing_id>
       activateApis:
         - compute.googleapis.com
         - deploymentmanager.googleapis.com
@@ -38,7 +41,7 @@ resources:
             - roles/viewer
           networkAccess: true
       usageExportBucket: true
-      sharedVPC: test-vpc-host-project
+      sharedVPC: <FIXME:vpc_host>
       sharedVPCSubnets:
-        - subnetId: subnet-1
+        - subnetId: <FIXME:vpc_host_subnet>
           region: us-east1
