DM/CLI Could not resolve cross-deployment reference in case of hierarchical resource outputs
In some cases resouces from deployment manifest can have other resources embedded as sub-resources,
for examples check issue #333. Added code parsing all resouces including sub resources.

Fixes #333

--- a/cli/testdata/cross-ref/dependent-final-expected.yaml
+++ b/cli/testdata/cross-ref/dependent-final-expected.yaml
@@ -12,4 +12,6 @@ resources:
     name: someName
     value: someValue
   string: stringValue
+  sub-resource: sub-property-value
+  sub-sub-resource: sub-sub-property-value
   type: /home/templates/network/network.py
