--- a/cli/testdata/cross-ref/dependent-with-refs.yaml
+++ b/cli/testdata/cross-ref/dependent-with-refs.yaml
@@ -7,3 +7,5 @@ resources:
   map: $(out.prj1.name1.res1.map)
   list: $(out.prj1.name1.res1.list)
   listOfMaps: $(out.prj1.name1.res1.listOfMaps)
+  sub-resource: $(out.prj1.name1.sub-resource.sub-property)
+  sub-sub-resource: $(out.prj1.name1.sub-sub-resource.sub-sub-property)
