[DM] Fixing ELB example
Fixing ELB example to match strict schema of backend service

--- a/dm/templates/external_load_balancer/examples/external_load_balancer_http.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_http.yaml
@@ -24,5 +24,7 @@ resources:
           healthCheck: <FIXME:healthcheck>
           backends:
             - group: <FIXME:instanceGroup>
+              balancingMode: UTILIZATION
+              maxUtilization: 0.8
       urlMap:
         defaultService: default-backend-service
