[DM] ELB example https fix

--- a/dm/templates/external_load_balancer/examples/external_load_balancer_https.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_https.yaml
@@ -29,11 +29,15 @@ resources:
           healthCheck: <FIXME:healthcheck>
           backends:
             - group: <FIXME:instanceGroup1>
+              balancingMode: UTILIZATION
+              maxUtilization: 0.8
         - resourceName: media-backend-service
           portName: https
           healthCheck: <FIXME:healthcheck>
           backends:
             - group: <FIXME:instanceGroup2>
+              balancingMode: UTILIZATION
+              maxUtilization: 0.8
       urlMap:
         defaultService: static-backend-service
         hostRules:
