[DM] ELB example ssl fix

--- a/dm/templates/external_load_balancer/examples/external_load_balancer_ssl.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_ssl.yaml
@@ -23,6 +23,8 @@ resources:
           healthCheck: <FIXME:healthcheck>
           backends:
             - group: <FIXME:instanceGroup>
+              balancingMode: UTILIZATION
+              maxUtilization: 0.8
       ssl:
         certificate:
           url: <FIXME:sslCertificateUrl>
