[DM] ELB examle tcp fix

--- a/dm/templates/external_load_balancer/examples/external_load_balancer_tcp.yaml
+++ b/dm/templates/external_load_balancer/examples/external_load_balancer_tcp.yaml
@@ -25,3 +25,5 @@ resources:
           healthCheck: <FIXME:healthcheck>
           backends:
             - group: <FIXME:instanceGroup>
+              balancingMode: UTILIZATION
+              maxUtilization: 0.8
