Fixes #382: CLI reference within a value https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/382
Added support for references in strings.

--- a/cli/testdata/cross-ref/main-manifest.yaml
+++ b/cli/testdata/cross-ref/main-manifest.yaml
@@ -9,6 +9,8 @@ layout: |
     outputs:
     - name: string
       finalValue: stringValue
+    - name: string2
+      finalValue: stringValue2
     - name: map
       finalValue:
          name: someName
