--- a/cli/testdata/cross-ref/dependent-final-expected.yaml
+++ b/cli/testdata/cross-ref/dependent-final-expected.yaml
@@ -5,6 +5,9 @@ resources:
 - list:
   - string1
   - string2
+  listBroken:
+  - string1
+  - string2
   listOfMaps:
   - name: value1
   - name: value2
@@ -12,6 +15,7 @@ resources:
     name: someName
     value: someValue
   string: stringValue
+  strings: stringValuestringValue2
   sub-resource: sub-property-value
   sub-sub-resource: sub-sub-property-value
   type: /home/templates/network/network.py
