--- a/cli/tests/create/firewall.yaml
+++ b/cli/tests/create/firewall.yaml
@@ -1,5 +1,4 @@
 name: cftcli-test-firewall-dpl
-project: gl-akopachevskyy-dm-seed
 
 imports:
 - path: ../../../dm/templates/firewall/firewall.py
@@ -9,7 +8,7 @@ resources:
 - name: cftcli-test-firewall
   type: firewall.py
   properties:
-    network: $(out.gl-akopachevskyy-dm-seed.cftcli-test-network-dpl.cftcli-test-network.name)
+    network: $(out.cftcli-test-network-dpl.cftcli-test-network.name)
     rules:
     - name: allow-proxy-from-inside
       allowed:
@@ -17,7 +16,7 @@ resources:
         ports:
         - "80"
         - "443"
-      description: test rule for network-test
+      description: test rule for $(out.cftcli-test-network-dpl.cftcli-test-network.name)
       direction: INGRESS
       sourceRanges:
       - 10.0.0.0/8
@@ -29,7 +28,7 @@ resources:
       - IPProtocol: tcp
         ports:
         - "53"
-      description: test rule for network-test-network
+      description: test rule for $(out.cftcli-test-network-dpl.cftcli-test-network.name)-network
       direction: EGRESS
       priority: 20
       destinationRanges:
