Fixes #488: DM Validator functional tests https://github.com/GoogleCloudPlatform/cloud-foundation-toolkit/issues/488
Added functional tests.
Added non-interactive flag.

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -30,4 +30,10 @@ $(PLATFORMS):
 
 .PHONY: test
 test:
-	go test ./...
+	# Skip integration tests in ./tests/ using -short flag
+	GO111MODULE=on go test -mod=vendor -short -tags=$(BUILDTAGS) ./...
+
+.PHONY: test-integration
+test-integration: build
+test-integration:
+	go test -mod=vendor -tags=$(BUILDTAGS) -run=CLI ./tests
