--- a/cli/testdata/launchpad/folder/folder_1.yaml
+++ b/cli/testdata/launchpad/folder/folder_1.yaml
@@ -1,10 +1,11 @@
 apiVersion: cft.dev/v1alpha1
 kind: Folder
-metadata:
-  name: group1
 spec:
   id: "group1"
   displayName: "Group 1"
+  folders:
+    - id: 123
+      displayName: asdf
   parentRef:
     type: Organization
     id: 12345678
