--- a/cli/testdata/launchpad/folder/folder_12.yaml
+++ b/cli/testdata/launchpad/folder/folder_12.yaml
@@ -1,10 +1,20 @@
 apiVersion: cft.dev/v1alpha1
 kind: Folder
-metadata:
-  name: group1_2
 spec:
   id: "group1_2"
   displayName: "Group 1-2"
+  folders:
+    - id: "group1_2_1"
+      displayName: "Group 1-2-1"
   parentRef:
     type: Folder
     id: group1
+---
+apiVersion: cft.dev/v1alpha1
+kind: Folder
+spec:
+  id: group1
+  displayName: "Group 1"
+  parentRef:
+    type: Organization
+    id: 12345678
