Updated stackdriver notification template, type, test and readme
* Fix #432

--- a/dm/templates/stackdriver_notification_channels/examples/stackdriver_notification_channels.yaml
+++ b/dm/templates/stackdriver_notification_channels/examples/stackdriver_notification_channels.yaml
@@ -22,8 +22,7 @@ resources:
     type: stackdriver_notification_channels.py
     properties:
       notificationChannels:
-        -
-          displayName: "name"
+        - displayName: "name"
           typeName: "slack"
           labels:
             channel_name: "#slack-channel"
