--- a/cli/testdata/launchpad/folder/folder_1.yaml
+++ b/cli/testdata/launchpad/folder/folder_1.yaml
@@ -2,10 +2,7 @@ apiVersion: cft.dev/v1alpha1
 kind: Folder
 spec:
   id: "group1"
-  displayName: "Group 1"
-  folders:
-    - id: 123
-      displayName: asdf
+  displayName: "group1"
   parentRef:
     type: Organization
     id: 12345678
