--- a/cli/testdata/launchpad/folder/folder_12.yaml
+++ b/cli/testdata/launchpad/folder/folder_12.yaml
@@ -2,19 +2,13 @@ apiVersion: cft.dev/v1alpha1
 kind: Folder
 spec:
   id: "group1_2"
-  displayName: "Group 1-2"
+  displayName: "group1_2"
   folders:
+    # Intentional out of order
+    - id: "group1_2_3"
+      displayName: "group1_2_3"
     - id: "group1_2_1"
-      displayName: "Group 1-2-1"
+      displayName: "group1_2_1"
   parentRef:
     type: Folder
     id: group1
----
-apiVersion: cft.dev/v1alpha1
-kind: Folder
-spec:
-  id: group1
-  displayName: "Group 1"
-  parentRef:
-    type: Organization
-    id: 12345678
