--- a/cli/testdata/launchpad/folder/org_1.yaml
+++ b/cli/testdata/launchpad/folder/org_1.yaml
@@ -2,7 +2,6 @@ apiVersion: cft.dev/v1alpha1
 kind: Organization
 spec:
   id: 12345678
-  displayName: "my-org"
   folders:
     - id: "group1"
-      displayName: "Group 1"
+      displayName: "group1"
