--- a/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
+++ b/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
@@ -54,6 +54,23 @@ resources:
           - name: example-matcher
             defaultService: ${HTTP_SECOND_BACKEND_NAME}
 
+  - name: ${HTTPS_RES_NAME}-2
+    type: external_load_balancer.py
+    properties:
+      portRange: ${HTTPS_PORT_RANGE}
+      quicOverride: ${QUIC_OVERRIDE}
+      backendServices:
+        - resourceName: ${HTTPS_FIRST_BACKEND_NAME}
+          healthCheck: $(ref.${HTTPS_HEALTHCHECK_NAME}.selfLink)
+          portName: ${HTTPS_PORT_NAME}
+          backends:
+            - group: $(ref.${HTTPS_IGM_NAME}.instanceGroup)
+      urlMap:
+        defaultService: ${HTTPS_FIRST_BACKEND_NAME}
+      ssl:
+        sslCertificates: 
+          - $(ref.${HTTPS_RES_NAME}.certificateSelfLink)
+
   - name: ${HTTPS_RES_NAME}
     type: external_load_balancer.py
     properties:
