--- a/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
+++ b/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
@@ -60,13 +60,13 @@ resources:
       portRange: ${HTTPS_PORT_RANGE}
       quicOverride: ${QUIC_OVERRIDE}
       backendServices:
-        - resourceName: ${HTTPS_FIRST_BACKEND_NAME}
+        - resourceName: ${HTTPS_FIRST_BACKEND_NAME}-2
           healthCheck: $(ref.${HTTPS_HEALTHCHECK_NAME}.selfLink)
           portName: ${HTTPS_PORT_NAME}
           backends:
             - group: $(ref.${HTTPS_IGM_NAME}.instanceGroup)
       urlMap:
-        defaultService: ${HTTPS_FIRST_BACKEND_NAME}
+        defaultService: ${HTTPS_FIRST_BACKEND_NAME}-2
       ssl:
         sslCertificates: 
           - $(ref.${HTTPS_RES_NAME}.certificateSelfLink)
