--- a/dm/templates/healthcheck/tests/integration/healthcheck.yaml
+++ b/dm/templates/healthcheck/tests/integration/healthcheck.yaml
@@ -16,7 +16,7 @@ resources:
     healthyThreshold: ${HEALTHY_THRESHOLD}
     host: host.testing
     port: ${PORT_80}
-    healthcheckType: HTTP
+    healthcheckType: HTTP-Legacy
 - name: ${RESOURCE_NAME_PREFIX}-legacy-https
   type: healthcheck.py
   properties:
@@ -25,9 +25,9 @@ resources:
     timeoutSec: ${TIMEOUT_SEC}
     unhealthyThreshold: ${UNHEALTHY_THRESHOLD}
     healthyThreshold: ${HEALTHY_THRESHOLD}
-    port: ${PORT_80}
-    healthcheckType: HTTPS
-- name: ${RESOURCE_NAME_PREFIX}-beta-http
+    port: ${PORT_443}
+    healthcheckType: HTTPS-Legacy
+- name: ${RESOURCE_NAME_PREFIX}-legacy-beta-http
   type: healthcheck.py
   properties:
     description: My Compute Engine beta HTTP healthcheck.
@@ -37,10 +37,10 @@ resources:
     healthyThreshold: ${HEALTHY_THRESHOLD}
     host: test-host.testing
     port: ${PORT_80}
-    healthcheckType: HTTP
+    healthcheckType: HTTP-Legacy
     response: test-response
     version: beta
-- name: ${RESOURCE_NAME_PREFIX}-beta-https
+- name: ${RESOURCE_NAME_PREFIX}-legacy-beta-https
   type: healthcheck.py
   properties:
     description: My Compute Engine beta HTTPS healthcheck.
@@ -49,8 +49,8 @@ resources:
     unhealthyThreshold: ${UNHEALTHY_THRESHOLD}
     healthyThreshold: ${HEALTHY_THRESHOLD}
     host: test-host.testing
-    port: 443
-    healthcheckType: HTTPS
+    port: ${PORT_443}
+    healthcheckType: HTTPS-Legacy
     response: test-response
     version: beta
 - name: ${RESOURCE_NAME_PREFIX}-beta-http2
@@ -114,7 +114,7 @@ resources:
     healthyThreshold: ${HEALTHY_THRESHOLD}
     proxyHeader: PROXY_V1
     requestPath: /health.html
-    healthcheckType: HTTPS
+    healthcheckType: HTTPS-Legacy
 - name: ${RESOURCE_NAME_PREFIX}-response-tcp
   type: healthcheck.py
   properties:
@@ -128,3 +128,50 @@ resources:
     healthcheckType: TCP
     request: request-data
     response: response-data
+- name: ${RESOURCE_NAME_PREFIX}-http
+  type: healthcheck.py
+  properties:
+    description: My Compute Engine legacy HTTP healthcheck.
+    checkIntervalSec: ${CHECK_INTERVAL_SEC}
+    timeoutSec: ${TIMEOUT_SEC}
+    unhealthyThreshold: ${UNHEALTHY_THRESHOLD}
+    healthyThreshold: ${HEALTHY_THRESHOLD}
+    host: host.testing
+    port: ${PORT_80}
+    healthcheckType: HTTP
+- name: ${RESOURCE_NAME_PREFIX}-https
+  type: healthcheck.py
+  properties:
+    description: My Compute Engine legacy HTTPS healthcheck.
+    checkIntervalSec: ${CHECK_INTERVAL_SEC}
+    timeoutSec: ${TIMEOUT_SEC}
+    unhealthyThreshold: ${UNHEALTHY_THRESHOLD}
+    healthyThreshold: ${HEALTHY_THRESHOLD}
+    port: ${PORT_443}
+    healthcheckType: HTTPS
+- name: ${RESOURCE_NAME_PREFIX}-beta-http
+  type: healthcheck.py
+  properties:
+    description: My Compute Engine beta HTTP healthcheck.
+    checkIntervalSec: ${CHECK_INTERVAL_SEC}
+    timeoutSec: ${TIMEOUT_SEC}
+    unhealthyThreshold: ${UNHEALTHY_THRESHOLD}
+    healthyThreshold: ${HEALTHY_THRESHOLD}
+    host: test-host.testing
+    port: ${PORT_80}
+    healthcheckType: HTTP
+    response: test-response
+    version: beta
+- name: ${RESOURCE_NAME_PREFIX}-beta-https
+  type: healthcheck.py
+  properties:
+    description: My Compute Engine beta HTTPS healthcheck.
+    checkIntervalSec: ${CHECK_INTERVAL_SEC}
+    timeoutSec: ${TIMEOUT_SEC}
+    unhealthyThreshold: ${UNHEALTHY_THRESHOLD}
+    healthyThreshold: ${HEALTHY_THRESHOLD}
+    host: test-host.testing
+    port: ${PORT_443}
+    healthcheckType: HTTPS
+    response: test-response
+    version: beta
