testing FWrule labels

--- a/dm/templates/forwarding_rule/tests/integration/forwarding_rule.yaml
+++ b/dm/templates/forwarding_rule/tests/integration/forwarding_rule.yaml
@@ -12,6 +12,9 @@ resources:
       loadBalancingScheme: ${EXTERNAL_LB_SCHEME}
       target: $(ref.${PROXY_NAME}.selfLink)
       portRange: ${EXTERNAL_PORT}
+      labels:
+        - name: testLabelName
+        - owner: Megatron
 
   - name: ${INTERNAL_RES_NAME}
     type: forwarding_rule.py
