--- a/dm/templates/forwarding_rule/tests/integration/forwarding_rule.yaml
+++ b/dm/templates/forwarding_rule/tests/integration/forwarding_rule.yaml
@@ -13,8 +13,8 @@ resources:
       target: $(ref.${PROXY_NAME}.selfLink)
       portRange: ${EXTERNAL_PORT}
       labels:
-        - name: testLabelName
-        - owner: Megatron
+        name: testLabelName
+        owner: Megatron
 
   - name: ${INTERNAL_RES_NAME}
     type: forwarding_rule.py
