--- a/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
+++ b/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
@@ -20,6 +20,9 @@ resources:
       ssl:
         certificate:
           url: $(ref.${HTTPS_RES_NAME}.certificateSelfLink)
+      labels:
+        name: testLabelName
+        owner: Megatron
 
   - name: ${HTTP_RES_NAME}
     type: external_load_balancer.py
