Fixing forwardingRule label support (#552)
* adding labels support to forwarding rules

* Adding labels support to fwrule template

* testing FWrule labels

* forwarding rule label tests

* loadbalancer label support

* Support for labels in beta

* fixing label support for forwarding rule

--- a/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
+++ b/dm/templates/external_load_balancer/tests/integration/external_load_balancer.yaml
@@ -21,9 +21,8 @@ resources:
         certificate:
           url: $(ref.${HTTPS_RES_NAME}.certificateSelfLink)
       labels:
-        name: testLabelName
-        owner: Megatron
-
+        name: testlabelname
+        owner: megatron
   - name: ${HTTP_RES_NAME}
     type: external_load_balancer.py
     properties:
