--- a/dm/templates/sap_hana/examples/sap_hana_standalone.yaml
+++ b/dm/templates/sap_hana/examples/sap_hana_standalone.yaml
@@ -20,16 +20,16 @@ resources:
   - name: sap_hana_standalone
     type: sap_hana_template.py
     properties:
-        primaryInstanceName: hana-db1
-        instanceType: n1-highmem-16
-        region: us-central1
-        primaryZone: us-central1-a
-        linuxImage: family/sles-12-sp3-sap
-        linuxImageProject: suse-sap-cloud
+        primaryInstanceName: [NAME]
+        instanceType: [INSTANCE_TYPE]
+        region: [REGION]
+        primaryZone: [ZONE]
+        linuxImage: [LINUX_IMAGE]
+        linuxImageProject: [IMAGE_PROJECT]
         sap_hana_deployment_bucket: [YOUR_BUCKET_NAME]
-        sap_hana_sid: DI4
-        sap_hana_sidadm_password: Google1234
-        sap_hana_system_password: Google1234
+        sap_hana_sid: [SID]
+        sap_hana_sidadm_password: [PASSWORD]
+        sap_hana_system_password: [PASSWORD]
         #
         # --- Advanced Options ---
         # The following advanced options are not usually needed. To use an advanced option, remove
